{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 243,
  "lineage": "29a34fa9-600c-b351-6429-bf19107c5099",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:442803386520:internet-gateway/igw-06abe2ba376a0a082",
            "id": "igw-06abe2ba376a0a082",
            "owner_id": "442803386520",
            "tags": {
              "Name": "project-igw"
            },
            "tags_all": {
              "Name": "project-igw"
            },
            "vpc_id": "vpc-056596e676dfe4f44"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "elb_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:442803386520:loadbalancer/app/projec/b231937526760058",
            "arn_suffix": "app/projec/b231937526760058",
            "desync_mitigation_mode": "defensive",
            "dns_name": "projec-20292543.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:442803386520:loadbalancer/app/projec/b231937526760058",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "projec",
            "security_groups": [
              "sg-0ec8f30359ccc1eba"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-055f7ed3e499910d5"
              },
              {
                "subnet_id": "subnet-059e8c7332eb09255"
              }
            ],
            "subnets": [
              "subnet-055f7ed3e499910d5",
              "subnet-059e8c7332eb09255"
            ],
            "vpc_id": "vpc-056596e676dfe4f44",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.asg_sg",
            "aws_subnet.public_subnet1",
            "aws_subnet.public_subnet2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:442803386520:listener/app/projec/b231937526760058/bd277bd7abaaaea0",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:442803386520:targetgroup/project/a7bbb7d2573ed04f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:442803386520:listener/app/projec/b231937526760058/bd277bd7abaaaea0",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:442803386520:loadbalancer/app/projec/b231937526760058",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.elb_app",
            "aws_lb_target_group.alb_target_group",
            "aws_security_group.asg_sg",
            "aws_subnet.public_subnet1",
            "aws_subnet.public_subnet2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:442803386520:targetgroup/project/a7bbb7d2573ed04f",
            "arn_suffix": "targetgroup/project/a7bbb7d2573ed04f",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 5
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:442803386520:targetgroup/project/a7bbb7d2573ed04f",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "project",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-056596e676dfe4f44"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "connectivity_type": "private",
            "id": "nat-06270bbedcef36e4b",
            "network_interface_id": "eni-009d6588d5a226188",
            "private_ip": "10.0.120.151",
            "subnet_id": "subnet-0c306d2e69638a95f",
            "tags": {
              "Name": "project-nat"
            },
            "tags_all": {
              "Name": "project-nat"
            }
          },
          "dependencies": [
            "aws_subnet.private_subnet1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "connectivity_type": "private",
            "id": "nat-0bbdc3d3588399bb0",
            "network_interface_id": "eni-099014f61d666a036",
            "private_ip": "10.0.14.106",
            "subnet_id": "subnet-04eab4a6923ca0848",
            "tags": {
              "Name": "project-nat"
            },
            "tags_all": {
              "Name": "project-nat"
            }
          },
          "dependencies": [
            "aws_subnet.private_subnet2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:442803386520:route-table/rtb-046b007bb1ca5e1f1",
            "id": "rtb-046b007bb1ca5e1f1",
            "owner_id": "442803386520",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06270bbedcef36e4b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "project-rtb-private1"
            },
            "tags_all": {
              "Name": "project-rtb-private1"
            },
            "timeouts": null,
            "vpc_id": "vpc-056596e676dfe4f44"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.nat_gw1",
            "aws_subnet.private_subnet1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:442803386520:route-table/rtb-06893af8860d14477",
            "id": "rtb-06893af8860d14477",
            "owner_id": "442803386520",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0bbdc3d3588399bb0",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "project-rtb-private2"
            },
            "tags_all": {
              "Name": "project-rtb-private2"
            },
            "timeouts": null,
            "vpc_id": "vpc-056596e676dfe4f44"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.nat_gw2",
            "aws_subnet.private_subnet2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:442803386520:route-table/rtb-01d7da1253efa88b1",
            "id": "rtb-01d7da1253efa88b1",
            "owner_id": "442803386520",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06abe2ba376a0a082",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "project-rtb-public1"
            },
            "tags_all": {
              "Name": "project-rtb-public1"
            },
            "timeouts": null,
            "vpc_id": "vpc-056596e676dfe4f44"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "assoc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07cc8f742ed2129cb",
            "route_table_id": "rtb-01d7da1253efa88b1",
            "subnet_id": "subnet-059e8c7332eb09255"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "assoc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07095224326c0eb19",
            "route_table_id": "rtb-01d7da1253efa88b1",
            "subnet_id": "subnet-055f7ed3e499910d5"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "assoc3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09f0a4004975acfc5",
            "route_table_id": "rtb-046b007bb1ca5e1f1",
            "subnet_id": "subnet-0c306d2e69638a95f"
          },
          "dependencies": [
            "aws_nat_gateway.nat_gw1",
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "assoc4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01ca5448902664ff4",
            "route_table_id": "rtb-046b007bb1ca5e1f1",
            "subnet_id": "subnet-04eab4a6923ca0848"
          },
          "dependencies": [
            "aws_nat_gateway.nat_gw1",
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet1",
            "aws_subnet.private_subnet2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "asg_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:442803386520:security-group/sg-0ec8f30359ccc1eba",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ec8f30359ccc1eba",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "asg_sg",
            "name_prefix": "",
            "owner_id": "442803386520",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-056596e676dfe4f44"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:442803386520:security-group/sg-0c4af81a076ada617",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c4af81a076ada617",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "wordpress-sg",
            "name_prefix": "",
            "owner_id": "442803386520",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-056596e676dfe4f44"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:442803386520:subnet/subnet-0c306d2e69638a95f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.120.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c306d2e69638a95f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "442803386520",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project-subnet-private1"
            },
            "tags_all": {
              "Name": "project-subnet-private1"
            },
            "vpc_id": "vpc-056596e676dfe4f44"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:442803386520:subnet/subnet-04eab4a6923ca0848",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.14.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04eab4a6923ca0848",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "442803386520",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project-subnet-private2"
            },
            "tags_all": {
              "Name": "project-subnet-private2"
            },
            "vpc_id": "vpc-056596e676dfe4f44"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:442803386520:subnet/subnet-059e8c7332eb09255",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.128.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-059e8c7332eb09255",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "442803386520",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project-subnet-public2"
            },
            "tags_all": {
              "Name": "project-subnet-public2"
            },
            "vpc_id": "vpc-056596e676dfe4f44"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:442803386520:subnet/subnet-055f7ed3e499910d5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-055f7ed3e499910d5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "442803386520",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-056596e676dfe4f44"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:442803386520:vpc/vpc-056596e676dfe4f44",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e811526bd8c4ed3a",
            "default_route_table_id": "rtb-0dd3668dcd9dbdb59",
            "default_security_group_id": "sg-0bf33c8c21d084a58",
            "dhcp_options_id": "dopt-7ac57d11",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-056596e676dfe4f44",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0dd3668dcd9dbdb59",
            "owner_id": "442803386520",
            "tags": {
              "Name": "project-vpc"
            },
            "tags_all": {
              "Name": "project-vpc"
            }
          }
        }
      ]
    }
  ]
}